tests/fixtures/fail/named_argument_unknown.sali
let make(value: i32): i32 = value

let main(): i32 = make(item: 42)
